static/styles.css
html,
body,
main {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
}

body {
    font-family: 'Open Sans', sans-serif;
    font-size: 70%;
    font-weight: 600;
    color: white;
    text-transform: uppercase;
    /* padding: 2em; */
    background-color: #201C40;
    overflow: hidden;
}


/* app */

#app {
    margin: 0;
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
}


/* achivemetns */

#achivements {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    width: 100%;
    min-height: 100%;
}


/* Welcome and loading screen */

#welcome {
    z-index: 1;
    overflow: hidden;
    text-align: center;
    width: 100%;
    height: 100%;
}

#welcome .logo {
    position: relative;
    animation-name: spin;
    animation-duration: 4000ms;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
    top: 10%;
}

#welcome div {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: white;
    width: 100%;
    height: 25em;
}

#welcome .title {
    width: 80vw;
    margin-top: 6em;
}

#welcome .buttons {
    position: relative;
    /* margin-top:3em; */
    display: block;
}

#enow {
    border-radius: 0.5em 0.5em 4em 0.5em;
    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#6ec6d9+0,2c4a9a+51,714494+99 */
    background: #6ec6d9;
    /* Old browsers */
    background: -moz-linear-gradient(-45deg, #6ec6d9 0%, #2c4a9a 51%, #714494 99%);
    /* FF3.6-15 */
    background: -webkit-linear-gradient(-45deg, #6ec6d9 0%, #2c4a9a 51%, #714494 99%);
    /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(135deg, #6ec6d9 0%, #2c4a9a 51%, #714494 99%);
    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#6ec6d9', endColorstr='#714494', GradientType=1);
    /* IE6-9 fallback on horizontal gradient */
}

#etoday {
    border-radius: 4em 0.5em 0.5em 0.5em;
    padding-left: 1.8em;
    margin-left: -0.3em;
    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#714494+0,f7a754+100 */
    background: #714494;
    /* Old browsers */
    background: -moz-linear-gradient(-45deg, #714494 0%, #f7a754 100%);
    /* FF3.6-15 */
    background: -webkit-linear-gradient(-45deg, #714494 0%, #f7a754 100%);
    /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(135deg, #714494 0%, #f7a754 100%);
    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#714494', endColorstr='#f7a754', GradientType=1);
    /* IE6-9 fallback on horizontal gradient */
}

#alle {
    border-radius: 0.5em 4em 0.5em 0.5em;
    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f7a754+0,d85297+100 */
    background: #f7a754;
    /* Old browsers */
    background: -moz-linear-gradient(-45deg, #f7a754 0%, #d85297 100%);
    /* FF3.6-15 */
    background: -webkit-linear-gradient(-45deg, #f7a754 0%, #d85297 100%);
    /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(135deg, #f7a754 0%, #d85297 100%);
    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#f7a754', endColorstr='#d85297', GradientType=1);
    /* IE6-9 fallback on horizontal gradient */
}

@keyframes spin {
    0% {
        left: -25%;
        transform: rotate(0deg);
        width: 150%;
    }
    50% {
        transform: rotate(180deg);
        width: 100%;
        left: 0%;
    }
    100% {
        left: -25%;
        transform: rotate(360deg);
        width: 150%;
    }
}

#map,
#notInAreaBanner,
#fog {
    position: absolute;
    bottom: 0;
    top: 0;
    left: 0;
    right: 0;
    background: #201C40;
}

#map {
    background: #2B2564
}

#notInAreaBanner {
    z-index: 1100;
}

#notInAreaBannerWrapper {
    position: absolute;
    top: 4em;
    left: 3em;
    right: 3em;
    background-color: white;
    object-position: center;
    height: 40%;
    width: 80%;
    border-radius: 2em;
    color: #4E4D4D;
    padding-left: 2em;
    font-weight: 400;
    padding-right: 0.5em;
    margin-left: -1em;
}

#bannerTitle {
    background-color: #f7a754;
    /* Old browsers */
    background: -moz-linear-gradient(90deg, #f7a754 0%, #d85297 100%);
    /* FF3.6-15 */
    background: -webkit-linear-gradient(90deg, #f7a754 0%, #d85297 100%);
    /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(90deg, #f7a754 0%, #d85297 100%);
    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#f7a754', endColorstr='#d85297', GradientType=1);
    /* IE6-9 fallback on horizontal gradient */
    ;
    box-shadow: 0.2em 0.2em 0.2em 0.04em rgba(70, 0, 56, 0.5);
    padding-top: 1em;
    border-top-left-radius: 2em;
    border-top-right-radius: 2em;
    padding-left: 2em;
    padding-bottom: 0.1em;
    margin-left: -2em;
    margin-right: -0.5em;
    color: white;
    padding-right: 0.8em;
    font-size: 100%;
}

#fog {
    z-index: -1;
    background: rgba(50, 50, 50, 1);
}


/* RHS menu */

nav#menuBar {
    z-index: 1500;
    position: absolute;
    right: 0;
    top: 0;
    text-align: right;
    border-bottom-left-radius: 3em;
    background-color: #f7a754;
    /* Old browsers */
    background: -moz-linear-gradient(90deg, #f7a754 0%, #d85297 100%);
    /* FF3.6-15 */
    background: -webkit-linear-gradient(90deg, #f7a754 0%, #d85297 100%);
    /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(90deg, #f7a754 0%, #d85297 100%);
    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#f7a754', endColorstr='#d85297', GradientType=1);
    /* IE6-9 fallback on horizontal gradient */
    ;
    box-shadow: 0.2em 0.2em 0.2em 0.04em rgba(70, 0, 56, 0.5);
}

nav#menuBar.collapsed {
    background: none;
}

ul.links li hr {
    height: 0.5em;
    border: none;
    background-color: #f7a754;
    /* Old browsers */
    background: -moz-linear-gradient(-45deg, #f7a754 0%, #d85297 100%);
    /* FF3.6-15 */
    background: -webkit-linear-gradient(-45deg, #f7a754 0%, #d85297 100%);
    /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(135deg, #f7a754 0%, #d85297 100%);
    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#f7a754', endColorstr='#d85297', GradientType=1);
    /* IE6-9 fallback on horizontal gradient */
    ;
    box-shadow: 0.1em 0.1em 0.1em 0.03em rgba(70, 0, 56, 0.5);
}

ul.links li h3 {
    padding: 0.5em 1em;
    margin: 0;
    padding-right: 3em;
    padding-left: 1em;
    padding-bottom: 1em;
}

#menuBar .hamburger {
    border: none;
    margin: 0 0.1em 0.1em 0.1em;
    padding: 0;
    font-size: 130%;
    background: none;
    color: white;
}

#menuBar ul {
    display: block;
    background: #FFFFFF;
    z-index: 1500;
    margin: 0;
    overflow: hidden;
    padding: 0;
    font-family: 'Open Sans', sans-serif;
    font-size: 100%;
    color: #575756;
    text-transform: uppercase;
    font-weight: 800;
    list-style-type: none;
    border-bottom-left-radius: 3em;
    text-align: left;
}

#menuBar ul li {
    list-style: none;
    padding: 0;
    margin: 0;
}

#menuBar li {
    padding: 1em;
    background-color: white;
    border-block-end-width: 40%;
    box-shadow: 0.2em 0.2em 0.2em 0.04em rgba(70, 0, 56, 0.5);
}


/*
Buttons
*/

button.button {
    display: inline-block;
    border: none;
    border-radius: 0.5em 0.5em 0.5em 0.5em;
    width: 25vw;
    color: #ffffff;
    padding: 1em;
    padding-top: 0.7em;
    padding-bottom: 0.7em;
    line-height: 1.1em;
    font-size: 1.3em;
    font-weight: 500;
    text-transform: uppercase;
    text-align: left;
    padding-left: 1.4em;
    margin-left: 0.5em;
    margin-right: 0.5em;
    margin-top: 2em;
    box-shadow: 0.2em 0.2em 0.2em 0.02em rgba(70, 0, 56, 0.3);
}

button.button:focus {
    border-radius: 40px;
}

.leaflet-popup {
    margin: 0;
    padding: 0;
}

.leaflet-popup-content-wrapper {
    margin: 2em;
    padding: 0;
}

.leaflet-popup-content {
    margin: 0;
    padding-left: 0;
}

.leaflet-popup h3 {
    background-color: #f7a754;
    /* Old browsers */
    background: -moz-linear-gradient(-45deg, #f7a754 0%, #d85297 100%);
    /* FF3.6-15 */
    background: -webkit-linear-gradient(-45deg, #f7a754 0%, #d85297 100%);
    /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(135deg, #f7a754 0%, #d85297 100%);
    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#f7a754', endColorstr='#d85297', GradientType=1);
    /* IE6-9 fallback on horizontal gradient */
    ;
    box-shadow: 0.1em 0.1em 0.1em 0.03em rgba(70, 0, 56, 0.5);
    border-radius: 0.5em 0.5em 0em 0em;
    line-height: 1.2em;
    padding-top: 1.5em;
    padding-left: 1em;
    padding-right: 1em;
    padding-bottom: 1em;
}

.leaflet-popup h3 a {
    color: white;
    text-decoration: none;
    line-height: 30%;
}

.leaflet-popup-tip-container {
    margin-top: -2em;
}

.leaflet-popup img {
    margin: 2%;
    width: 96%;
}

.leaflet-popup-content p {
    margin: 0 0;
    padding: 0 2% 0.005em 2%;
}


/* 
.leaflet-popup img {
    max-width: 10em;
} */

